test: add unit tests for UserService and related classes; refactor package structure